--- a/style.css
+++ b/style.css
@@ -26,12 +26,15 @@ QMenuBar {
 }
 
 QComboBox:editable, QComboBox:!editable {
+    border: 1px solid  rgb(48, 25, 52);
     background-color: black;
     color: rgb(239, 239, 239);
     selection-background-color: rgb(102, 102, 255);
+
 }
 
 QListView {
+    border: 1px solid rgb(175, 93, 253);
     background-color: black;
     color: rgb(239, 239, 239);
 }
